# strands-swarms

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py  dynamic_swarm.py  simple.py
src/strands_swarms/: __init__.py  context.py  definition.py  dynamic.py  dynamic_swarm.py  events.py  graph.py  orchestrator.py  planner.py  registry.py  swarm.py  task.py
